--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-    "name": "gitbook-plugin",
-    "description": "Sample plugin for GitBook",
+    "name": "gitbook-theme-clean",
+    "description": "Sample clean theme GitBook",
     "main": "index.js",
-    "version": "0.0.2",
+    "version": "0.1",
     "engines": {
         "gitbook": "*"
     },
     "homepage": "https://github.com/GitbookIO/plugin",
     "repository": {
         "type": "git",
-        "url": "https://github.com/GitbookIO/plugin.git"
+        "url": "https://github.com/arkaitzgarro/gitbook-theme-clean"
     },
-    "license": "Apache 2",
+    "license": "MIT",
     "bugs": {
-        "url": "https://github.com/GitbookIO/plugin/issues"
+        "url": "https://github.com/arkaitzgarro/gitbook-theme-clean/issues"
     }
 }
